--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -17,14 +17,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="117dp"
-            android:layout_marginEnd="135dp"
+            android:layout_marginTop="8dp"
             android:autoSizeTextType="uniform"
-            android:fontFamily="@font/font"
+            android:fontFamily="@font/baloo"
             android:text="Quiz Time!"
             android:textColor="@android:color/black"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,13 +34,15 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/button_start_quiz"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="16dp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="@font/baloo"
             android:text="Highscore: 0"
+
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/textView26"
-            app:layout_constraintHorizontal_bias="0.25"
+            app:layout_constraintHorizontal_bias="0.315"
             app:layout_constraintStart_toStartOf="@+id/textView26"
             app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
@@ -50,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginTop="8dp"
+            android:backgroundTint="#8B1F1F"
             android:text="Start Quiz"
             android:theme="@style/lionelButton"
             app:layout_constraintEnd_toEndOf="@+id/spinner_difficulty"
@@ -83,45 +86,52 @@
 
         <ImageView
             android:id="@+id/imageView43"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="137dp"
+            android:layout_height="154dp"
             android:layout_below="@+id/text_view_highscore"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/text_view_highscore"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="@+id/text_view_highscore"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_highscore"
+            android:layout_marginTop="200dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_start_quiz"
             app:srcCompat="@drawable/codey_main_cut" />
 
         <TextView
             android:id="@+id/textView28"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="Choose what programming language you wish to take a quiz and its difficulty."
+            android:layout_width="0dp"
+            android:layout_height="148dp"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/txtbox2"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+
+            android:paddingRight="20dp"
+            android:paddingBottom="0dp"
+            android:text="Let's test what you have learned thoughout the lesson. Choose what programming language you wish to take a quiz and its difficulty."
             app:layout_constraintEnd_toEndOf="@+id/imageView43"
-            app:layout_constraintHorizontal_bias="0.36"
-            app:layout_constraintStart_toStartOf="@+id/imageView43"
-            app:layout_constraintTop_toBottomOf="@+id/imageView43" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_start_quiz" />
 
         <TextView
             android:id="@+id/textView25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/baloo"
             android:text="Language:"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView28"
-            app:layout_constraintHorizontal_bias="0.571"
-            app:layout_constraintStart_toStartOf="@+id/textView28"
-            app:layout_constraintTop_toBottomOf="@+id/textView28" />
+            app:layout_constraintEnd_toEndOf="@+id/textView26"
+            app:layout_constraintHorizontal_bias="0.462"
+            app:layout_constraintStart_toStartOf="@+id/textView26"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_highscore" />
 
         <TextView
             android:id="@+id/textView34"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/baloo"
             android:text="Difficulty:"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/spinner_category"
@@ -132,8 +142,7 @@
             android:id="@+id/btn_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:background="#00FFFFFF"
             android:minWidth="48dp"
             android:minHeight="48dp"
