--- a/app/src/main/res/layout/activity_python_language.xml
+++ b/app/src/main/res/layout/activity_python_language.xml
@@ -2,33 +2,17 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
-
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:background="@drawable/tcolor"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:title="PYTHON"
-            app:titleTextColor="#fff" />
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="wrap_content" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-
-
         android:layout_height="match_parent"
         app:layout_anchor="@+id/nestedScrollView"
         app:layout_anchorGravity="center"
@@ -39,48 +23,47 @@
             android:layout_height="match_parent"
             tools:context=".care_languages.PythonLanguageActivity">
 
+
             <Button
                 android:id="@+id/btnIntroduction"
-                android:layout_width="270dp"
-                android:layout_height="75dp"
+                android:layout_width="280dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:includeFontPadding="true"
                 android:paddingLeft="0dp"
                 android:paddingTop="10dp"
                 android:paddingRight="0dp"
-                android:paddingBottom="0dp"
+                android:paddingBottom="10dp"
                 android:text="@string/_1_introduction"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                android:textSize="20sp"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
-                app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/btnComments"
                 app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar1"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
             <Button
                 android:id="@+id/btnVariables"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_4_variables"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -93,18 +76,17 @@
             <Button
                 android:id="@+id/btnComments"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_3_comments"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -119,18 +101,17 @@
             <Button
                 android:id="@+id/btnInputs"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_5_inputs"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -144,18 +125,17 @@
             <Button
                 android:id="@+id/btnDataTypes"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_6_data_types"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -168,18 +148,17 @@
             <Button
                 android:id="@+id/btnConditionalStatements"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_8_conditional_statements"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -192,19 +171,18 @@
             <Button
                 android:id="@+id/btnOperators"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="12dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_7_operators"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -218,18 +196,17 @@
             <Button
                 android:id="@+id/btnLoopingStatements"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="5dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_9_looping_statements"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -242,18 +219,17 @@
             <Button
                 android:id="@+id/btnArrays"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_10_arrays"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
@@ -266,24 +242,21 @@
             <Button
                 android:id="@+id/btnOop"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="11. OOP"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                 app:layout_constraintEnd_toEndOf="@+id/btnLoopingStatements"
                 app:layout_constraintTop_toBottomOf="@+id/btnLoopingStatements"
                 app:strokeColor="#AAAAAA"
@@ -292,22 +265,21 @@
             <Button
                 android:id="@+id/btnSyntax"
                 android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#8B1F1F"
+                android:fontFamily="@font/baloo"
                 android:paddingLeft="0dp"
-                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_2_syntax"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/python_icon"
+                android:textColor="#D7DBDD"
+                app:cornerRadius="100dp"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
-                app:iconTint="#000000"
+
                 app:layout_constraintEnd_toStartOf="@+id/btnComments"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -345,30 +317,50 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="63dp"
-                android:layout_height="109dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="150dp"
+                android:layout_height="190dp"
                 android:contentDescription="@string/codey_image"
-                android:src="@drawable/codey_python"
+                android:src="@drawable/pyyy"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toTopOf="@+id/guideline5"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnOop" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="114dp"
+                android:background="@drawable/txtbox"
                 android:fontFamily="@font/lionel"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:paddingRight="35dp"
+                android:paddingBottom="15dp"
                 android:text="Click a lesson that you want to begin and I will guide you throughout this study!"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="TextSizeCheck" />
+
+            <include
+                android:id="@+id/toolbar"
+                layout="@layout/custom_actionbar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <include
+                android:id="@+id/toolbar1"
+                layout="@layout/languages_tool_bar_python"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
