--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -184,7 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="9dp"
-                android:text="2."
+                android:text="B."
                 app:layout_constraintEnd_toEndOf="@+id/textView52"
                 app:layout_constraintEnd_toStartOf="@+id/radio_group"
                 app:layout_constraintStart_toStartOf="@+id/textView52"
@@ -194,9 +194,9 @@
                 android:id="@+id/textView63"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="26dp"
                 android:layout_marginEnd="9dp"
-                android:text="4."
+                android:text="D."
                 app:layout_constraintEnd_toEndOf="@+id/textView61"
                 app:layout_constraintEnd_toStartOf="@+id/radio_group"
                 app:layout_constraintStart_toStartOf="@+id/textView61"
@@ -208,7 +208,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="9dp"
-                android:text="3."
+                android:text="C."
                 app:layout_constraintEnd_toEndOf="@+id/textView47"
                 app:layout_constraintEnd_toStartOf="@+id/radio_group"
                 app:layout_constraintStart_toStartOf="@+id/textView47"
@@ -219,9 +219,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginEnd="19dp"
-                android:text="1."
+                android:text="A."
                 app:layout_constraintEnd_toStartOf="@+id/radio_group"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
