--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,44 +14,50 @@
 
 
         <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="120dp"
-            android:layout_height="239dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="44dp"
-            android:background="@drawable/circlebg"
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="190dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_image"
             android:src="@drawable/codeee"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/btnC" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnC"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView21"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginBottom="114dp"
+            android:background="@drawable/txtbox"
+            android:fontFamily="@font/lionel"
+            android:paddingLeft="10dp"
+            android:paddingTop="15dp"
+            android:paddingRight="35dp"
+            android:paddingBottom="15dp"
             android:text="@string/to_continue_kindly_choose_your_desired_programming_language_that_you_want_to_learn_and_let_s_get_started"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/imageView5"
-            app:layout_constraintVertical_bias="0.0" />
+            android:textColor="#000000"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="TextSizeCheck" />
 
         <ImageButton
             android:id="@+id/btnJava"
             android:layout_width="305dp"
             android:layout_height="88dp"
-
-            android:layout_marginTop="24dp"
             android:adjustViewBounds="false"
             android:background="@drawable/btn1"
             android:contentDescription="@string/java_button"
             android:cropToPadding="false"
             android:elevation="10dp"
             android:paddingLeft="20dp"
-            android:paddingTop="10dp"
 
+            android:paddingTop="10dp"
             android:paddingEnd="100dp"
             android:paddingBottom="15dp"
             android:scaleType="fitStart"
