--- a/app/src/main/res/layout/activity_java_language.xml
+++ b/app/src/main/res/layout/activity_java_language.xml
@@ -8,7 +8,22 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" >
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/custom_actionbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <include
+            android:id="@+id/toolbar1"
+            layout="@layout/languages_tool_bar_java"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -18,37 +33,50 @@
         app:layout_anchorGravity="center"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:context=".care_languages.PythonLanguageActivity">
 
 
-            <Button
-                android:id="@+id/btnIntroduction"
-                android:layout_width="280dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="#8B1F1F"
-                android:fontFamily="@font/baloo"
-                android:includeFontPadding="true"
-                android:paddingLeft="0dp"
-                android:paddingTop="10dp"
-                android:paddingRight="0dp"
-                android:paddingBottom="10dp"
-                android:text="@string/_1_introduction"
-                android:textColor="#D7DBDD"
-                android:textSize="20sp"
-                app:cornerRadius="100dp"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
-                app:iconSize="30dp"
-                app:layout_constraintBottom_toTopOf="@+id/btnComments"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar1"
-                app:strokeColor="#AAAAAA"
-                app:strokeWidth="0.1dp" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:id="@+id/container"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/btnIntroduction"
+                        android:layout_width="280dp"
+                        android:layout_height="60dp"
+                        android:layout_marginTop="16dp"
+                        android:backgroundTint="#8B1F1F"
+                        android:fontFamily="@font/baloo"
+                        android:includeFontPadding="true"
+                        android:paddingLeft="0dp"
+                        android:paddingTop="10dp"
+                        android:paddingRight="0dp"
+                        android:paddingBottom="10dp"
+                        android:text="@string/_1_introduction"
+                        android:textColor="#D7DBDD"
+                        android:textSize="20sp"
+                        app:cornerRadius="100dp"
+                        app:iconGravity="top"
+                        app:iconPadding="0dp"
+                        app:iconSize="30dp"
+                        app:layout_constraintBottom_toTopOf="@+id/btnComments"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                        app:layout_constraintStart_toStartOf="@+id/guideline2"
+                        app:layout_constraintTop_toTopOf="@+id/guideline4"
+                        app:strokeColor="#AAAAAA"
+                        app:strokeWidth="0.1dp" />
+
+
 
             <Button
                 android:id="@+id/btnVariables"
@@ -168,32 +196,32 @@
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
-            <Button
-                android:id="@+id/btnOperators"
-                android:layout_width="130dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="12dp"
-                android:backgroundTint="#8B1F1F"
-                android:fontFamily="@font/baloo"
-                android:paddingLeft="0dp"
-                android:paddingRight="0dp"
-                android:paddingBottom="0dp"
-                android:shadowColor="#000000"
-                android:text="@string/_7_operators"
-                android:textColor="#D7DBDD"
-                app:cornerRadius="100dp"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
-                app:iconSize="30dp"
-                app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnLoopingStatements"
-                app:layout_constraintEnd_toEndOf="@+id/btnInputs"
-                app:layout_constraintTop_toBottomOf="@+id/btnInputs"
-                app:strokeColor="#AAAAAA"
-                app:strokeWidth="0.1dp" />
+                <Button
+                    android:id="@+id/btnOperators"
+                    android:layout_width="130dp"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="12dp"
+                    android:backgroundTint="#8B1F1F"
+                    android:fontFamily="@font/baloo"
+                    android:paddingLeft="0dp"
+                    android:paddingRight="0dp"
+                    android:paddingBottom="0dp"
+                    android:shadowColor="#000000"
+                    android:text="@string/_7_operators"
+                    android:textColor="#D7DBDD"
+                    app:cornerRadius="100dp"
+                    app:iconGravity="top"
+                    app:iconPadding="0dp"
+                    app:iconSize="30dp"
+                    app:iconTint="#000000"
+                    app:layout_constraintBottom_toTopOf="@+id/btnLoopingStatements"
+                    app:layout_constraintEnd_toEndOf="@+id/btnInputs"
+                    app:layout_constraintTop_toBottomOf="@+id/btnInputs"
+                    app:strokeColor="#AAAAAA"
+                    app:strokeWidth="0.1dp" />
 
-            <Button
+                <Button
                 android:id="@+id/btnLoopingStatements"
                 android:layout_width="130dp"
                 android:layout_height="55dp"
@@ -346,25 +374,11 @@
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="TextSizeCheck" />
 
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/custom_actionbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <include
-                android:id="@+id/toolbar1"
-                layout="@layout/languages_tool_bar_java"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-
-
+            </FrameLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
