--- a/app/src/main/res/layout/fragment_java_introduction_1.xml
+++ b/app/src/main/res/layout/fragment_java_introduction_1.xml
@@ -18,7 +18,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_java_cut" />
 
         <TextView
             android:id="@+id/textView"
@@ -42,7 +42,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/P_Operators_imageView1"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_java_cut" />
 
         <Button
             android:id="@+id/python_introduction_DYK1"
