--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,6 @@
 
     <style name="lionelButton" parent="android:Widget.Button">
         <item name="android:fontFamily">@font/font</item>
-        <item name="android:backgroundTint">@color/light_blue</item>
+        <item name="android:backgroundTint">@color/codey_button</item>
     </style>
 </resources>
